<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_bar_rl"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:background="@color/colorWhite"
    android:gravity="center_vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/ll_mic"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/voice_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/volume" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/first_text"
            android:text="@string/mic"/>
    </LinearLayout>

    <ImageView
        android:layout_width="1px"
        android:layout_height="15dp"
        android:background="@color/bottom_bar_border"/>

    <LinearLayout
        android:id="@+id/ll_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/avatar_camera_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/first_text"
            android:text="@string/camera"/>
    </LinearLayout>




    <ImageView
        android:layout_width="1px"
        android:layout_height="15dp"
        android:background="@color/bottom_bar_border"/>


    <LinearLayout
        android:id="@+id/ll_stand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_stand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/avatar_stand_up_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/first_text"
            android:text="@string/stand"/>
    </LinearLayout>




</LinearLayout>